styles/styles.css
@import url("reset.css");

:root {
  --tier-heading-bg-S: #ff7f7e;
  --tier-heading-bg-A: #ffbf7f;
  --tier-heading-bg-B: #feff7f;
  --tier-heading-bg-C: #7eff80;
  --tier-heading-bg-D: #7fffff;
  --tier-heading-bg-F: #807fff;
}

main {
  max-width: 1000px;
}

.tiers {
  display: flex;
  flex-direction: column;
  gap: 2rem;

  padding-inline: 40px;

  list-style: none;
}

.tier {
  --cell-size: 125px;

  display: flex;
  flex-wrap: wrap; /** Layout note: Remove this, and the extra line in UL goes away */

  container-type: inline-size;
}

.tier > h2 {
  margin: 0;
  flex: 1 0 var(--cell-size);
  max-width: var(--cell-size);
  display: grid;
  place-content: center;

  height: var(--cell-size);

  background-color: var(--tier-heading-bg, grey);
}

@container (width < 525px) {
  .tier > h2 {
    max-width: unset;
    height: min-content;
  }
}

.tier > .tier__items {
  flex: 3 1 50ch;
}

.tier__items {
  padding: 0;
  margin: 0;

  display: flex;
  flex-wrap: wrap;
  gap: 1rem;

  list-style: none;

  background-color: color-mix(
    in oklab,
    var(--tier-heading-bg) 75%,
    rebeccapurple
  );
}

.tier__items > li {
  padding: 1em;

  min-width: var(--cell-size);
  max-width: 100%;
  min-height: var(--cell-size);
  flex-shrink: 0;

  display: grid;
  place-content: center;

  font-size: 1.5rem;

  background-color: #bbb;
}

